# BIS5151E_Research-Assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README-V2.md  README-V3.md  README.md  ROADMAP.md  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CODEOWNERS  changelog.yml  ci.yml  docker-build.yml  release.yml
configs/: app.yaml
data/raw/: ai-in-information_systems.txt  digital_transformation.txt  research_assistant-concept.txt
database/init/: 01-create-database.sql  02-trulens-schema.sql  README.md
database/migrations/: README.md  template.sql
database/scripts/: add-foreign-keys.sh  backup-postgres.sh  restore-postgres.sh
docker/: .env.example  docker-compose.amd.yml  docker-compose.nvidia.yml  docker-compose.yml  init-db.sql
docs/: README.md
docs/api/: AUTHENTICATION.md  ENDPOINTS.md  ENDPOINTS_REFERENCE.md  README-V2.md  (+2 more)
outputs/: rag_mvp_20251025_210418.md  rag_mvp_20251120_200228.md
research_ai/: README.md  final_report.md  pyproject.toml
research_ai/src/research_ai/: crew.py  main.py
research_ai/src/research_ai/config/: agents.yaml  tasks.yaml
research_ai/src/research_ai/tools/: custom_tool.py
scripts/: debug_weaviate.py  fetch_arxiv.py
src/: __init__.py
tests/: TESTING.md  conftest.py  test_api.py  test_api_pipeline.py  test_orchestrator.py  test_rag_determinism.py  test_rag_service.py
(+242 files in other folders)
