[project]
name = "research_ai"
version = "0.1.0"
description = "research_ai using crewAI"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
  "crewai[tools]==1.7.2",
  "litellm>=1.75.3",
]

[project.scripts]
research_ai = "research_ai.main:run"
run_crew = "research_ai.main:run"
train = "research_ai.main:train"
replay = "research_ai.main:replay"
test = "research_ai.main:test"
run_with_trigger = "research_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/research_ai"]

[tool.hatch.build.targets.sdist]
packages = ["src/research_ai"]
